// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accumulate: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "accumulate((curr, acc) => curr + acc, 0, list(2, 3, 4, 1));",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": 10,
  },
  "visualiseListResult": undefined,
}
`;

exports[`append: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "equal(append(list(\\"string\\", 123), list(456, null, undefined)), list(\\"string\\", 123, 456, null, undefined));",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": true,
  },
  "visualiseListResult": undefined,
}
`;

exports[`assoc not found: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "equal(assoc(2, list(pair(1, 2), pair(3, 4))), false);",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": true,
  },
  "visualiseListResult": undefined,
}
`;

exports[`assoc: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "equal(assoc(3, list(pair(1, 2), pair(3, 4))), pair(3, 4));",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": true,
  },
  "visualiseListResult": undefined,
}
`;

exports[`bad index error list_ref: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "list_ref(list(1, 2, 3), 3);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: head(xs) expects a pair as argument xs, but encountered null],
      "location": SourceLocation {
        "end": Position {
          "column": 26,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`bad index error list_ref: expectError 2`] = `
Object {
  "alertResult": undefined,
  "code": "list_ref(list(1, 2, 3), -1);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: list_ref(xs, n) expects a positive integer as argument n, but encountered -1],
      "location": SourceLocation {
        "end": Position {
          "column": 27,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`bad index error list_ref: expectError 3`] = `
Object {
  "alertResult": undefined,
  "code": "list_ref(list(1, 2, 3), 1.5);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: list_ref(xs, n) expects a positive integer as argument n, but encountered 1.5],
      "location": SourceLocation {
        "end": Position {
          "column": 28,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`bad index error list_ref: expectError 4`] = `
Object {
  "alertResult": undefined,
  "code": "list_ref(list(1, 2, 3), '1');",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: list_ref(xs, n) expects a positive integer as argument n, but encountered 1],
      "location": SourceLocation {
        "end": Position {
          "column": 28,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`bad number error build_list: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "build_list(-1, x => x);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: build_list(n, fun) expects a positive integer as argument n, but encountered -1],
      "location": SourceLocation {
        "end": Position {
          "column": 22,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`bad number error build_list: expectError 2`] = `
Object {
  "alertResult": undefined,
  "code": "build_list(1.5, x => x);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: build_list(n, fun) expects a positive integer as argument n, but encountered 1.5],
      "location": SourceLocation {
        "end": Position {
          "column": 23,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`bad number error build_list: expectError 3`] = `
Object {
  "alertResult": undefined,
  "code": "build_list('1', x => x);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: build_list(n, fun) expects a positive integer as argument n, but encountered 1],
      "location": SourceLocation {
        "end": Position {
          "column": 23,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`bad number error enum_list: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "enum_list('1', '5');",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: enum_list(start, end) expects a number as argument start, but encountered 1],
      "location": SourceLocation {
        "end": Position {
          "column": 19,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`bad number error enum_list: expectError 2`] = `
Object {
  "alertResult": undefined,
  "code": "enum_list('1', 5);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: enum_list(start, end) expects a number as argument start, but encountered 1],
      "location": SourceLocation {
        "end": Position {
          "column": 17,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`bad number error enum_list: expectError 3`] = `
Object {
  "alertResult": undefined,
  "code": "enum_list(1, '5');",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: enum_list(start, end) expects a number as argument start, but encountered 5],
      "location": SourceLocation {
        "end": Position {
          "column": 17,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`build_list: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "equal(build_list(5, x => x * x), list(0, 1, 4, 9, 16));",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": true,
  },
  "visualiseListResult": undefined,
}
`;

exports[`empty list is null: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "list();",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": null,
  },
  "visualiseListResult": undefined,
}
`;

exports[`enum_list with floats: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "equal(enum_list(1.5, 5), list(1.5, 2.5, 3.5, 4.5));",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": true,
  },
  "visualiseListResult": undefined,
}
`;

exports[`enum_list: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "equal(enum_list(1, 5), list(1, 2, 3, 4, 5));",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": true,
  },
  "visualiseListResult": undefined,
}
`;

exports[`filter: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "equal(filter(x => x <= 4, list(2, 10, 1000, 1, 3, 100, 4, 5, 2, 1000)), list(2, 1, 3, 4, 2));",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": true,
  },
  "visualiseListResult": undefined,
}
`;

exports[`for_each: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "let sum = 0;
for_each(x => {
  sum = sum + x;
}, list(1, 2, 3));
sum;",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": 6,
  },
  "visualiseListResult": undefined,
}
`;

exports[`head works: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "head(pair(1, 'a string \\"\\"'));",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": 1,
  },
  "visualiseListResult": undefined,
}
`;

exports[`list creates list: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "function f() { return 1; }
list(1, 'a string \\"\\"', () => a, f, true, 3.14);",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": Array [
      1,
      Array [
        "a string \\"\\"",
        Array [
          [Function],
          Array [
            [Function],
            Array [
              true,
              Array [
                3.14,
                null,
              ],
            ],
          ],
        ],
      ],
    ],
  },
  "visualiseListResult": undefined,
}
`;

exports[`list_ref: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "list_ref(list(1, 2, 3, \\"4\\", 4), 4);",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": 4,
  },
  "visualiseListResult": undefined,
}
`;

exports[`list_to_string: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "list_to_string(list(1, 2, 3));",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": "[1, [2, [3, null]]]",
  },
  "visualiseListResult": undefined,
}
`;

exports[`map: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "equal(map(x => 2 * x, list(12, 11, 3)), list(24, 22, 6));",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": true,
  },
  "visualiseListResult": undefined,
}
`;

exports[`member: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "equal(
  member(\\"string\\", list(1, 2, 3, \\"string\\", 123, 456, null, undefined)),
  list(\\"string\\", 123, 456, null, undefined));",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": true,
  },
  "visualiseListResult": undefined,
}
`;

exports[`non-list error accumulate: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "accumulate((x, y) => x + y, [1, 2, 3]);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: head(xs) expects a pair as argument xs, but encountered undefined],
      "location": SourceLocation {
        "end": Position {
          "column": 38,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`non-list error accumulate: expectError 2`] = `
Object {
  "alertResult": undefined,
  "code": "accumulate((x, y) => x + y, [1, 2, 3]);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: head(xs) expects a pair as argument xs, but encountered undefined],
      "location": SourceLocation {
        "end": Position {
          "column": 38,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`non-list error append: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "append([1, 2, 3], list(1, 2, 3));",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: head(xs) expects a pair as argument xs, but encountered [1, 2, 3]],
      "location": SourceLocation {
        "end": Position {
          "column": 32,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`non-list error assoc: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "assoc(1, [1, 2, 3]);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: head(xs) expects a pair as argument xs, but encountered [1, 2, 3]],
      "location": SourceLocation {
        "end": Position {
          "column": 19,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`non-list error filter: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "filter(x => true, [1, 2, 3]);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: head(xs) expects a pair as argument xs, but encountered [1, 2, 3]],
      "location": SourceLocation {
        "end": Position {
          "column": 28,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`non-list error for_each: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "for_each(x=>x, [1, 2, 3]);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: for_each expects a list as argument xs, but encountered 1,2,3],
      "location": SourceLocation {
        "end": Position {
          "column": 25,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`non-list error head: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "head([1, 2, 3]);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: head(xs) expects a pair as argument xs, but encountered [1, 2, 3]],
      "location": SourceLocation {
        "end": Position {
          "column": 15,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`non-list error length: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "length([1, 2, 3]);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: tail(xs) expects a pair as argument xs, but encountered [1, 2, 3]],
      "location": SourceLocation {
        "end": Position {
          "column": 17,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`non-list error map: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "map(x=>x, [1, 2, 3]);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: head(xs) expects a pair as argument xs, but encountered [1, 2, 3]],
      "location": SourceLocation {
        "end": Position {
          "column": 20,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`non-list error member: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "member(1, [1, 2, 3]);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: head(xs) expects a pair as argument xs, but encountered [1, 2, 3]],
      "location": SourceLocation {
        "end": Position {
          "column": 20,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`non-list error remove: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "remove(1, [1, 2, 3]);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: head(xs) expects a pair as argument xs, but encountered [1, 2, 3]],
      "location": SourceLocation {
        "end": Position {
          "column": 20,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`non-list error remove_all: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "remove_all(1, [1, 2, 3]);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: head(xs) expects a pair as argument xs, but encountered [1, 2, 3]],
      "location": SourceLocation {
        "end": Position {
          "column": 24,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`non-list error reverse: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "reverse([1, 2, 3]);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: reverse(xs) expects a list as argument xs, but encountered 1,2,3],
      "location": SourceLocation {
        "end": Position {
          "column": 18,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`non-list error set_head: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "set_head([1, 2, 3], 4);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: set_head(xs,x) expects a pair as argument xs, but encountered [1, 2, 3]],
      "location": SourceLocation {
        "end": Position {
          "column": 22,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`non-list error set_tail: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "set_tail([1, 2, 3], 4);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: set_tail(xs,x) expects a pair as argument xs, but encountered [1, 2, 3]],
      "location": SourceLocation {
        "end": Position {
          "column": 22,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`non-list error tail: expectError 1`] = `
Object {
  "alertResult": undefined,
  "code": "tail([1, 2, 3]);",
  "displayResult": undefined,
  "errors": Array [
    ExceptionError {
      "error": [Error: tail(xs) expects a pair as argument xs, but encountered [1, 2, 3]],
      "location": SourceLocation {
        "end": Position {
          "column": 15,
          "line": 1,
        },
        "start": Position {
          "column": 0,
          "line": 1,
        },
      },
      "severity": "Error",
      "type": "Runtime",
    },
  ],
  "result": Object {
    "status": "error",
  },
  "visualiseListResult": undefined,
}
`;

exports[`pair creates pair: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "pair(1, 'a string \\"\\"');",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": Array [
      1,
      "a string \\"\\"",
    ],
  },
  "visualiseListResult": undefined,
}
`;

exports[`remove not found: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "remove(2, list(1));",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": Array [
      1,
      null,
    ],
  },
  "visualiseListResult": undefined,
}
`;

exports[`remove: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "remove(1, list(1));",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": null,
  },
  "visualiseListResult": undefined,
}
`;

exports[`remove_all not found: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "equal(remove_all(1, list(2, 3, \\"1\\")), list(2, 3, \\"1\\"));",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": true,
  },
  "visualiseListResult": undefined,
}
`;

exports[`remove_all: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "equal(remove_all(1, list(1, 2, 3, 4, 1, 1, \\"1\\", 5, 1, 1, 6)), list(2, 3, 4, \\"1\\", 5, 6));",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": true,
  },
  "visualiseListResult": undefined,
}
`;

exports[`reverse: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "equal(reverse(list(\\"string\\", null, undefined, null, 123)), list(123, null, undefined, null, \\"string\\"));",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": true,
  },
  "visualiseListResult": undefined,
}
`;

exports[`set_head: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "let p = pair(1, 2);
const q = p;
set_head(p, 3);
p === q && equal(p, pair(3, 2));",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": true,
  },
  "visualiseListResult": undefined,
}
`;

exports[`set_tail: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "let p = pair(1, 2);
const q = p;
set_tail(p, 3);
p === q && equal(p, pair(1, 3));",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": true,
  },
  "visualiseListResult": undefined,
}
`;

exports[`tail of a 1 element list is null: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "tail(list(1));",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": null,
  },
  "visualiseListResult": undefined,
}
`;

exports[`tail works: expectResult 1`] = `
Object {
  "alertResult": undefined,
  "code": "tail(pair(1, 'a string \\"\\"'));",
  "displayResult": undefined,
  "errors": Array [],
  "result": Object {
    "status": "finished",
    "value": "a string \\"\\"",
  },
  "visualiseListResult": undefined,
}
`;
